--- a/src/index.css
+++ b/src/index.css
@@ -406,6 +406,7 @@ background:  rgb(119, 58, 58);
   justify-content: center;
   align-items: center;
   width: 523px !important;
+  height: 400px;
 }
 .sidebar-label-container {
   -webkit-user-select: none;
@@ -765,12 +766,18 @@ input:focus {
   }
   
   .onePoster1 {
-    max-width: 53%;
+    max-width: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin: 7px;
+    align-items: center;
+    margin: auto;
+    gap: 30px;
+    
   }
+  .drone{
+    margin-top: 1px;
+  }
+  
   .Poster {
     min-width: 553px;
     height: 261px;
@@ -795,11 +802,7 @@ input:focus {
     margin-bottom: 80px;
   }
 
-  .onePoster1 {
-    flex-direction: column;
-    gap: 30px;
-    margin-left: 20px;
-  }
+ 
 
   .Poster {
     width: 100%;
@@ -808,8 +811,9 @@ input:focus {
 
   .salesPartPost1 {
     width: 100%;
-    max-width: 535px;
-    padding-left: 0;
+    margin-left: -15px;
+    display: flex;
+    gap: 8px;
   }
 
   .salesPart {
@@ -817,7 +821,7 @@ input:focus {
     max-width: 535px;
   }
   .viewPart {
-    width: 100%;
+    max-width: 600px;
   }
   
   .itemContent {
@@ -825,7 +829,9 @@ input:focus {
   }
 
   .salesPartPost {
-    padding: 0 20px;
+    max-width: 600px;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .salesPart {
@@ -853,11 +859,7 @@ input:focus {
     gap: 10px; 
     margin: auto;
   }
-  .salesPartPost1 {
-    width: 583px;
-    gap: 15px; 
-    margin-left: -2px;
-  }
+ 
   .salesPartPost2 {
     width: 100%;
     gap: 20px; 
@@ -880,12 +882,17 @@ input:focus {
     flex-direction: column;
   }
   .ftresFree {
-    width: 553px;
+    width: 100%;
     padding-left: 60px;
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 40px;
+    gap: 0;
+  }
+  
+  .ftresFree li{
+    display: flex;
+    gap: 0;
   }
   .communityPost {
     width: 400px;
@@ -1221,16 +1228,17 @@ input:focus {
     display: none;
   }
   .PhonesMemo {
+    max-width: 600px;
+    display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    padding: 0;
-    gap: 0;
+    gap: 4;
+    margin: auto;
   }
 
   .allMemo {
     width: 50%; 
     box-sizing: border-box; 
-    padding: 2px; 
+    
   }
 
   .zoomable-bg {
@@ -1389,7 +1397,7 @@ input:focus {
     display: none;
   }
   .lastFooter1{
-    width: 583px;
+    width: 100%;
     align-items: center;
     justify-content: start;
     padding-left: 15px;
@@ -1399,7 +1407,8 @@ input:focus {
     margin-top: 209px;
   }
   .imgFoto{
-    width: 100%;
+    width: 523px;
+    height: 400px;
   }
   /* filterrrrrrr */
   .filter-sidebar {
