--- a/src/index.css
+++ b/src/index.css
@@ -1116,10 +1116,12 @@ input:focus {
   }
 
   .posterTall {
-    max-width: 320px;
+    width: 100%;
+    /* max-width: 320px; */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin: auto;
+    /* justify-content: center;
+    align-items: center; */
     flex-direction: column;
   }
   .posterTall1 {
@@ -1586,12 +1588,7 @@ input:focus {
   }
 }
 @media only screen and (max-width: 600px) {
-  /* html {
-    width: 100%;
-  }
-  .App {
-    width: 100%;
-  } */
+
   * {
     margin: 0;
     padding: 0;
@@ -1619,19 +1616,19 @@ input:focus {
     display: none;
   }
   /* .logoIcons {
-    min-width: 599px;
+    width: 100%;
     height: 70px;
     display: flex;
     justify-content: space-between;
+    margin-left: -25px;
     border-bottom: 1px solid rgb(212, 212, 212);
     margin-bottom: 18px;
   } */
   .logoicon {
-    min-width: 599px;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    /* margin-left: -64px; */
+    justify-content: space-between;
   }
   .logoIconFund {
     min-width: 599px;
@@ -1663,6 +1660,9 @@ input:focus {
   .topHeader {
     display: none;
   }
+  .logoIbid{
+    margin-left: -55px;
+  }
   .iconsHeader {
     width: 75px;
     display: flex;
@@ -1670,7 +1670,7 @@ input:focus {
     align-items: center;
     gap: 15px;
     font-size: 19px;
-    margin-right: 104px;
+    margin-right: 36px;
   }
   .topgav {
     min-width: 300px;
@@ -1683,7 +1683,7 @@ input:focus {
     display: block;
   }
   .headerTop {
-    min-width: 599px;
+    /* min-width: 599px; */
     /* max-width: 483px; */
     display: flex;
     border: none;
@@ -1774,20 +1774,22 @@ input:focus {
     align-items: center;
   }
   .viewPart {
-    min-width: 599px;
+    width: 100%;
     gap: 50px;
     margin-top: 80px;
     margin-bottom: 80px;
   }
 
   .Poster {
-    min-width: 599px;
+    width: 100%;
+    /* min-width: 599px; */
 
     /* max-width: 535px; */
   }
 
   .salesPartPost1 {
-    max-width: 599px;
+    width: 100%;
+    /* max-width: 599px; */
     display: flex;
     justify-content: center;
     gap: 8px;
@@ -1795,7 +1797,7 @@ input:focus {
 
   .salesPart {
     width: 100%;
-    max-width: 535px;
+    /* max-width: 535px; */
   }
 
   .itemContent {
@@ -1887,6 +1889,10 @@ input:focus {
   .FootSlide {
     padding: 25px;
     margin-left: 20px;
+  }
+  .SlideItemBack{
+    width: 100%;
+    box-sizing: border-box;
   }
   .sliderpart {
     padding: 10px;
@@ -2077,12 +2083,13 @@ input:focus {
     height: 250px;
   }
   .posterTall {
-    min-width: 550px;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    /* margin-left: 25px; */
-    margin-left: 2rem;
-    /* margin-right: 2rem; */
+    align-items: center;
+    justify-content: center;
+    /* margin: 0; */
+    margin: auto;
   }
   .posterTall1 {
     width: 545px;
@@ -2292,7 +2299,7 @@ input:focus {
 
   .MemoslideOne > div {
     width: 100%;
-    max-width: 500px;
+    /* max-width: 500px; */
     min-height: 500px;
     margin: 0 auto;
   }
@@ -2356,7 +2363,7 @@ input:focus {
     gap: 25px;
   }
   .LabOne1 {
-    max-width: 580px;
+    /* max-width: 580px; */
     height: 294px;
   }
   .LabOne2 {
@@ -2558,13 +2565,15 @@ input:focus {
     position: absolute;
     display: block;
     list-style: none;
-    background-color: blue;
+    color: #000;
+    background-color: #C2C7CF;
     margin-left: 0;
     margin-right: 0;
     left: 0;
     top: 98px;
     transition: all 0.5s ease-out;
-    min-width: 599px;
+    /* min-width: 599px; */
+    width: 100%;
   }
   .nav-links {
     display: none;
